--- a/angular/app/partials/partial1.html
+++ b/angular/app/partials/partial1.html
@@ -1,1 +1,1 @@
-<p>This is the partial for view 1.</p>
+<svg ngd3-scatter datajson="buildings | filter:filterBldgs(sfGraphMin, sfGraphMax, sectors)" xAxisLabel="Floor Area [sf]" yAxisLabel="Energy Use Intensity [kBTU/yr/sf]" xKey="BLDG_FLOOR_AREA" yKey="SITE_EUI" id="eui-vs-sf"></svg>
