WIP: D3 from Angular Directives

--- a/angular/app/partials/partial1.html
+++ b/angular/app/partials/partial1.html
@@ -1,1 +1,1 @@
-<svg ngd3-scatter datajson="buildings | filter:filterBldgs(sfGraphMin, sfGraphMax, sectors)" xAxisLabel="Floor Area [sf]" yAxisLabel="Energy Use Intensity [kBTU/yr/sf]" xKey="BLDG_FLOOR_AREA" yKey="SITE_EUI" id="eui-vs-sf"></svg>
+<svg ngd3-scatter datajson="buildings|filterBldgs:sfMin:sfMax:sectors" xAxisLabel="Floor Area [sf]" yAxisLabel="Energy Use Intensity [kBTU/yr/sf]" xKey="BLDG_FLOOR_AREA" yKey="SITE_EUI" id="eui-vs-sf"></svg>
