--- a/angular/app/partials/partial1.html
+++ b/angular/app/partials/partial1.html
@@ -1,1 +1,5 @@
-<svg ngd3-scatter datajson="buildings | filter:filterBldgs(sfGraphMin, sfGraphMax, sectors)" xAxisLabel="Floor Area [sf]" yAxisLabel="Energy Use Intensity [kBTU/yr/sf]" xKey="BLDG_FLOOR_AREA" yKey="SITE_EUI" id="eui-vs-sf"></svg>
+<svg ng-attr-width="{{width}}" ng-attr-height="{{height}}">
+  <g class="graph" fill="blue">
+    <circle ng-repeat="p in points" ng-attr-cx="{{p.x}}" ng-attr-cy="{{p.y}}" r=2></circle>
+  </g>
+</svg>
