--- a/css/bldgenergy.css
+++ b/css/bldgenergy.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Inconsolata);
+
 body {
   overflow-y:scroll;
   margin: 0;
@@ -13,18 +15,8 @@ div {
   margin: 0;
 }
 
-/*
-#offsetDiv {
-  margin-left: 100px;
-  margin-top: 100px;
-}
-*/
-
-
-#test1 {
-  margin: 0;
-}
-
-.graph svg {
-  height: 500px;
+text {
+   text-anchor: middle;
+   stroke: none;
+   /* font-family: Inconsolata; */
 }
